--- a/depositions.tex
+++ b/depositions.tex
@@ -30,8 +30,8 @@ Alle Prozesse finden in speziellen Abscheidungskammern oder Reaktoren statt, üb
 \begin{table}
   \begin{threeparttable}
     \caption[Auswahl möglicher Produkte von PVD, CVD und ALD]{
-      Auswahl möglicher Produkte von PVD, CVD und ALD.
-      Weitere Produkte und Precursor finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012,ritala_chapter_2008}.
+      Auswahl möglicher Produkte der verschiedenen Abscheidungsmethoden.
+      Details zu den Produkten und Prozessgasen finden sich in den Referenzen für PVD\cite{mattox_handbook_2010,helmersson_ionized_2006}, CVD\cite{pierson_handbook_1999} und ALD\cite{puurunen_surface_2005,elliott_atomic-scale_2012,ritala_chapter_2008}.
     }
     \label{tab:deposition-materials}
     \begin{tabularx}{\textwidth}{XcX}
