--- a/intro.tex
+++ b/intro.tex
@@ -2,7 +2,7 @@
 \label{intro}
 
 %% {Aktueller Stand der Technologien und damit verbundene Herausforderungen}
-Gasphasenabscheidungen werden zur Produktion konformer, dünner Schichten auf strukturierten und glatten Substraten genutzt, wobei besonders die Erzeugung ultradünner, hoch reiner, homogener Schichten eine Schlüsselstellung bei der Fertigung von Bauelementen in der Nanoelektronik einnimmt\cite{grannemann_thin_1993}.
+Gasphasenabscheidungen werden zur Herstellung konformer, dünner Schichten auf strukturierten und glatten Substraten genutzt, wobei besonders die Erzeugung ultradünner, hoch reiner, homogener Schichten eine Schlüsselstellung bei der Fertigung von Bauelementen in der Nanoelektronik einnimmt\cite{grannemann_thin_1993}.
 Sie sind beispielsweise für die Produktion dünner Dielektrika\cite{gordon_vapor_2001}, Interconnects\cite{waechtler_copper_2009} und Diffusionsbarrieren\cite{grannemann_thin_1993,raaijmakers_low_1994} interessant, für die besonders präzise Abscheidungsmethoden notwendig sind.
 %% {weitere Anwendungen von Gasphasenabscheidung}
 Gasphasenabscheidungen werden auch für eine Vielzahl anderer Anwendungen verwendet, wie beispielsweise für die Produktion von passivierenden und protektiven Beschichtungen\cite{higashiwaki_algan/gan_2006,jankowski_subnanometer_1989}.
@@ -11,7 +11,7 @@ Doch auch größere Oberflächen werden per Gasphasenabscheidung mit Dünnschich
 
 %% {Kandidat zur Lösung von Herausforderungen}
 Bei Gasphasenabscheidungen adsorbieren einzelne Atome oder Moleküle aus der Gasphase auf der Oberfläche und bilden so eine dünne Schicht, deren Dicke präzise im Sub-Nanometer-Bereich kontrolliert werden kann\cite{mattox_handbook_2010,pierson_handbook_1999}.
-Mit Physikalischer Gasphasenabscheidung (PVD, Physical Vapor Deposition), Chemischer Gasphasenabscheidung (CVD, Chemical Vapor Deposition) und Atomlagenabscheidung (ALD, Atomic Layer Deposition) stehen Methoden zur Verfügung, die das Wachstum verschiedener Materialien mit unterschiedlichen Graden der Prozesskontrolle erlauben asd.
+Mit der Physikalischen Gasphasenabscheidung (PVD, Physical Vapor Deposition), der Chemischen Gasphasenabscheidung (CVD, Chemical Vapor Deposition) und der Atomlagenabscheidung (ALD, Atomic Layer Deposition) stehen Methoden zur Verfügung, welche das Wachstum verschiedener Materialien mit unterschiedlichen Graden der Prozesskontrolle erlauben.
 
 %% {Mein Gebiet}
 Atomistische Simulationen können helfen, unter verschiedenen Bedingungen die strukturellen Eigenschaften der abgeschiedenen Schicht zu beschreiben, anhand derer auch Rückschlüsse auf elektronische\cite{aspnes_optical_1981,steudel_influence_2004} oder mechanische Eigenschaften\cite{chasiotis_mechanical_2003,cammarata_nanoendentation_1990} gezogen werden können.
@@ -48,4 +48,4 @@ Zuletzt wird die reaktive Hydroxylierung einer Aluminiumoxid-Oberfläche mit Was
 
 Zum Abschluss wird die Arbeit mit Kapitel~\ref{summary} zusammen gefasst, bevor interessante Fragestellungen und Anknüpfungspunkte für künftige Untersuchungen gegeben werden.
 
-Im Anhang der Arbeit sind experimentelle Referenzwerte, ergänzende Informationen zu den verwendeten Datenstrukturen und dem Laufzeitverhalten sowie ergänzende Ergebnisse der simulierten Gasphasenabscheidungen zu finden.
+Im Anhang der Arbeit sind experimentelle Referenzwerte, weitergehende Informationen zu den verwendeten Datenstrukturen und dem Laufzeitverhalten sowie ergänzende Ergebnisse der simulierten Gasphasenabscheidungen zu finden.
