--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -6,8 +6,8 @@ Deshalb werden reaktive Kraftfelder genutzt, welche auf einer expliziten Beschre
 
 \subsection{Verfügbare ReaxFF-Parametrisierungen}
 
-Da die ReaxFF-Formulierung erst innerhalb des letzten Jahrzehntes an Popularität gewonnen hat, sind die verfügbaren Potentiale auf sehr spezielle Probleme angepasst und unterstützen meist entweder Bulkmaterialien oder Reaktionen zwischen Molekülen.
-Tabelle~\ref{tab:siliconpotentials} listet die im Rahmen der Arbeit untersuchten ReaxFF-Parametrisierungen auf, die in der Literatur gefunden werden konnten.
+Da die ReaxFF-Formulierung erst innerhalb des letzten Jahrzehntes an Popularität gewonnen hat, sind die verfügbaren Potentiale auf sehr spezielle Probleme angepasst und unterstützen zumeist entweder Bulkmaterialien oder Reaktionen zwischen Molekülen.
+Tabelle~\ref{tab:siliconpotentials} listet die im Rahmen der Arbeit untersuchten ReaxFF-Parametrisierungen auf.
 
 \begin{table}[hb]
   \caption{Untersuchte ReaxFF-Parametrisierungen für Silizium- und Siliziumoxidsysteme}
@@ -15,72 +15,67 @@ Tabelle~\ref{tab:siliconpotentials} listet die im Rahmen der Arbeit untersuchten
   \oddrowcolors
   \begin{tabularx}{1\textwidth}{|lXc|}
     \hline
-    \textbf{Bezeichnung}  & \textbf{Anwendung \& Kommentare}                                                                          & \textbf{Ref.}                     \\
+    \textbf{Parametrisierung}  & \textbf{Anwendung \& Kommentare}                                                                     & \textbf{Ref.}                     \\
     \hline
     \pot{Al\_Al0\_AlN}    & \ce{Al}, \ce{Al2O3}, \ce{AlN}. Basiert auf einer Si-Parametrisierung                                      & \cite{plimpton_lammps_2014}       \\
     \pot{chenoweth}       & Zersetzung von Polydimethylsiloxane bei hohen Drücken und Temperaturen. Ergänzung von \ce{C-Si}-Bindungen & \cite{chenoweth_simulations_2005} \\
     \pot{kulkarni}        & Reaktion von Sauerstoff mit \ce{OH}-terminierten Siliziumoxid-Oberflächen                                 & \cite{kulkarni_oxygen_2013}       \\
-    \pot{lg}              & ``low gradients''. Siehe liu\_nitramines. Fehlerhafte Version aus LAMMPS                                  & \cite{liu_reaxff-lg:_2011}        \\
+    \pot{lg}              & ``low gradients''. Siehe liu\_nitramines. Fehlerhafte Version aus LAMMPS\cite{plimpton_lammps_2014}       & \cite{liu_reaxff-lg:_2011}        \\
     \pot{liu\_ettringite} & Verspannung von Ettringit (\ce{Ca6[Al(OH)6]2(SO4)3 26H2O}). Basiert auf Si-Parametrisierung               & \cite{liu_development_2012}       \\
     \pot{liu\_nitramines} & Dichtebestimmung von Nitramin-Molekülen bei hohen Drücken. Dichte erhöht durch Van-der-Waals-Korrekturen  & \cite{liu_reaxff-lg:_2011}        \\
     \pot{narayanan}       & Präparation mit \ce{Li-Al}-Silikaten. Für Phasenübergänge von Eukryptit-Kristallen (\ce{LiAl[SiO4]})      & \cite{narayanan_reactive_2012}    \\
     \pot{newsome}         & Oxidation von \ce{SiC}-Oberflächen mit \ce{O2} und \ce{H2O} bei \SIrange{500}{5000}{\kelvin}              & \cite{newsome_oxidation_2012}     \\
     \pot{nielson}         & Reaktionskinetik an Metallkatalysatoren bei hohen Temperaturen                                            & \cite{nielson_development_2005}   \\
-    \pot{zhang}           & Zersetzung energetischer Moleküle (Nitramin-Explosionen)                                                  & \cite{zhang_carbon_2009}          \\
+    \pot{zhang}           & Zersetzung energiereicher Moleküle (Nitramin-Explosionen)                                                  & \cite{zhang_carbon_2009}          \\
     \hline
   \end{tabularx}
 \end{table}
 
 \subsection{Voruntersuchungen}
 
-In Ergänzung zu den bisherigen Voruntersuchungen, welche sich entsprechend der erwarteten Strukturen der abgeschiedenen Schichten auf die Beschreibung kristalliner Strukturen beschränkten, werden für die Silizium-Parametrisierungen auch die Eigenschaften amorpher Strukturen untersucht.
-Die verwendeten Methoden wurden bereits in Abschnitt~\ref{mdmethods} vorgestellt.
-Diese zusätzlichen Untersuchungen haben umfassendere Aussagen über die Anwendbarkeit der Parametrisierungen für vollständige Abscheidungssimulationen zum Ziel.
-Die Ergebnisse dieser Betrachtungen sind in Tabelle~\ref{tab:siliconpreresults} zusammen gefasst und werden im Weiteren kurz diskutiert.
+Zur Abschätzung der Anwendbarkeit der Parametersätze auf die Simulation von Silizium-PVD wurden die amorphe und kristalline Phase auf Stabilität und strukturelle Eigenschaften geprüft (Tabelle~\ref{tab:siliconpreresults}).
+Zusätzlich wurden in Hinblick auf Siliziumoxid-CVD auch die Precursormoleküle Silan und Sauerstoff untersucht, welche nur in Anhang~\ref{appendix_silica} betrachtet werden, da bisher kein vollständiger Abscheidungsprozess simuliert wurde.
 
 \begin{table}[th]
   \begin{threeparttable}
-    \caption[Zusammenfassung der Voruntersuchungen für Silizium-Systeme]{
-      Zusammenfassung der Voruntersuchungen für Silizium-Systeme.
-      Siehe Anhang~\ref{appendix_silicon}
-    }
+    \caption{Zusammenfassung der Ergebnisse der Silizium-Voruntersuchungen}
     \label{tab:siliconpreresults}
 
     \oddrowcolors
-    \begin{tabularx}{\textwidth}{|lCCCCCCC|}
+    \begin{tabularx}{\textwidth}{|lCCCCCC|}
       \hline
-      \textbf{Bezeichnung}    & LMP\tnote{a} & c-\ce{Si} & c-\ce{SiO2} & a-\ce{Si} & \ce{SiH4} & \ce{+O2} & PVD\tnote{b} \\
-      \hline                % & LAMMPS       & c-Si      & c-SiO2      & a-Si      & Silane    & +O2      & PVD          \\
-      \pot{Al\_Al0\_AlN}      & \cmark       & ~         & (\cmark)    & \cmark    & \cmark    & ~        & \cmark       \\
-      \pot{chenoweth}         & ~            & ~         & ~           & ~         & ~         & ~        & ~            \\
-      \pot{kulkarni}          & \cmark       & \cmark    & \cmark      & \cmark    & \cmark    & (\cmark) & \cmark       \\
-      \pot{lg}                & ~            & ~         & ~           & ~         & ~         & ~        & ~            \\
-      \pot{liu\_ettringite}   & \cmark       & ~         & \cmark      & \cmark    & ~         & ~        & \cmark       \\
-      \pot{liu\_nitramines}   & ~            & ~         & ~           & ~         & ~         & ~        & ~            \\
-      \pot{narayanan}         & \cmark       & ~         & \cmark      & \cmark    & ~         & ~        & \cmark       \\
-      \pot{newsome}           & \cmark       & ~         & (\cmark)    & ~         & ~         & (\cmark) & \cmark       \\
-      \pot{nielson}           & \cmark       & \cmark    & \cmark      & \cmark    & \cmark    & ~        & \cmark       \\
-      \pot{zhang}             & \cmark       & ~         & ~           & ~         & \cmark    & \cmark   & ~            \\
+      \textbf{Parametrisierung} & \textbf{LMP\tnote{a}} & \textbf{c-\ce{Si}} & \textbf{a-\ce{Si}} & \textbf{PVD\tnote{b}} & \ce{SiH4}\tnote{c} & \ce{+O2}\tnote{c} \\
+      \hline                %   & LAMMPS                & c-Si               & a-Si               & PVD                   & Silane             & +O2               \\
+      \pot{Al\_Al0\_AlN}        & \cmark                & ~                  & \cmark             & \cmark                & \cmark             & ~                 \\
+      \pot{chenoweth}           & ~                     & ~                  & ~                  & ~                     & ~                  & ~                 \\
+      \pot{kulkarni}            & \cmark                & \cmark             & \cmark             & \cmark                & \cmark             & (\cmark)          \\
+      \pot{lg}                  & ~                     & ~                  & ~                  & ~                     & ~                  & ~                 \\
+      \pot{liu\_ettringite}     & \cmark                & ~                  & \cmark             & \cmark                & ~                  & ~                 \\
+      \pot{liu\_nitramines}     & ~                     & ~                  & ~                  & ~                     & ~                  & ~                 \\
+      \pot{narayanan}           & \cmark                & ~                  & \cmark             & \cmark                & ~                  & ~                 \\
+      \pot{newsome}             & \cmark                & ~                  & ~                  & \cmark                & ~                  & (\cmark)          \\
+      \pot{nielson}             & \cmark                & \cmark             & \cmark             & \cmark                & \cmark             & ~                 \\
+      \pot{zhang}               & \cmark                & ~                  & \cmark             & ~                     & \cmark             & \cmark            \\
       \hline
     \end{tabularx}
 
- %% & CVD\tnote{b}
- %% & CVD
- %% & \cmark?
- %% & ~
- %% & \cmark?
- %% & ~
- %% & \cmark?
- %% & ~
- %% & \cmark?
- %% & \cmark?
- %% & \cmark?
- %% & ~
+ %% & c-\ce{SiO2} & CVD\tnote{b}
+ %% & c-SiO2      & CVD
+ %% & (\cmark)    & \cmark?
+ %% & ~           & ~
+ %% & \cmark      & \cmark?
+ %% & ~           & ~
+ %% & \cmark      & \cmark?
+ %% & ~           & ~
+ %% & \cmark      & \cmark?
+ %% & (\cmark)    & \cmark?
+ %% & \cmark      & \cmark?
+ %% & ~           & ~
 
     \begin{tablenotes}[para]
       \item[a] LMP: Kompatibilität mit LAMMPS
       \item[b] PVD: a-\ce{Si}-PVD mit Parsivald
-      %% \item[b] CVD: a-\ce{SiO2}-CVD mit Parsivald
+      \item[c] Ergebnisse der Precursor-Simulationen befinden sich in Anhang~\ref{appendix_silica}
     \end{tablenotes}
   \end{threeparttable}
 \end{table}
@@ -88,29 +83,131 @@ Die Ergebnisse dieser Betrachtungen sind in Tabelle~\ref{tab:siliconpreresults} 
 \subsubsection{Kompatibilität mit der Molekulardynamiksoftware LAMMPS (LMP)}
 
 Einige Potentialdateien sind aus unerfindlichen Gründen nicht mit der aktuellen Version der LAMMPS-Bibliothek kompatibel, was sich in harten Abbrüchen des Programmes äußert und sie von weiteren Untersuchungen ausschließt.
-Andere Dateien lassen sich zwar laden und benutzen, äußern jedoch Warnungen über fehlerhafte van-der-Waals-Parameter, die aber nicht zu sonstigen Fehlern führen und meist nur Stickstoff- oder Platzhalteratome\footnote{ReaxFF-Parametrisierungen enthalten ein wechselwirkungsfreies Platzhalter-Element \ce{X} zum Zweck des Ausschlusses einzelner Atome aus der Simulation. Einige seiner Parameter werden von LAMMPS als fehlerhaft markiert.} betreffen.
-Die Parametersätze \pot{chenoweth}, \pot{lg} und \pot{liu\_nitramines} können nicht mit LAMMPS genutzt werden.
+Die Parametersätze \pot{chenoweth}, \pot{lg} und \pot{liu\_nitra\-mines} konnten aus diesem Grund nicht für MD-Simulationen genutzt werden.
 
 \subsubsection{Kristalleigenschaften (c-\ce{Si})}
 
-Diese Untersuchungen sind identisch zu den Untersuchungen der Kristallstrukturen aus den vorherigen Abschnitten.
-Eine Parametrisierung gilt in dieser Hinsicht als erfolgreich, wenn eine Relaxierung der Kristallstruktur unterhalb der Schmelztemperatur von \SI{1687}{\kelvin}\cite{haynes_crc_2011} die Gittereigenschaften bewahrt, wofür die Dichten und radialen Verteilungsfunktionen sowie die daraus gewonnenen Koordinationszahlen und Bindungslängen verglichen werden\todo{Tabelle aus Anhang HieR einfügen}.
-Dabei überwiegen die Formen der radialen Verteilungsfunktionen, die nach dem langsamen Herunterkühlen der erhitzten Struktur wieder kristalline Eigenschaften zeigen sollten.
-Dies geschieht allerdings nur bei \pot{kulkarni} und \pot{nielson}, wohingegen die anderen Parametrisierungen auch bei niedrigen \todo{wie niedrig waren die Experimente?}Temperaturen zu einer Verformung des Gitters hin zu amorphen Strukturen neigen.
-Detaillierte Informationen zu den Ergebnissen sind in Anhang~\ref{appendix_silicon} zu finden.
+\begin{table}[b]
+  \oddrowcolors
+  \caption[Strukturelle Eigenschaften von c-Si]{Strukturelle Eigenschaften kristalliner Strukturen nach der Relaxierung mit verschiedenen ReaxFF-Parametrisierungen}
+  \label{tab:csiresults}
+
+  \begin{tabularx}{\textwidth}{|llXXlX|}
+    \hline
+    \textbf{Parametrisierung} & \multicolumn{2}{l}{\textbf{Bindungslänge}}   & \textbf{Struktur} & \textbf{Dichte}    & ~                     \\
+    \hline
+    \textit{kristallin}       & \SI{2.352}{\angstrom} & ~                    & kristallin        & \SI{2.3296}{\gpcc} & ~                     \\
+    \pot{kulkarni}            & \SI{2.303}{\angstrom} & \SI{-2.08}{\percent} & kristallin        & \SI{2.481}{\gpcc}  & \SI{+6.50}{\percent}  \\
+    \pot{liu\_ettringite}     & \SI{2.325}{\angstrom} & \SI{-1.15}{\percent} & amorph            & \SI{2.830}{\gpcc}  & \SI{+21.48}{\percent} \\
+    \pot{narayanan}           & \SI{2.325}{\angstrom} & \SI{-1.15}{\percent} & amorph            & \SI{2.825}{\gpcc}  & \SI{+21.27}{\percent} \\
+    \pot{newsome}             & \SI{2.359}{\angstrom} & \SI{+0.30}{\percent} & (kristallin)      & \SI{2.427}{\gpcc}  & \SI{+4.18}{\percent}  \\
+    \pot{nielson}             & \SI{2.293}{\angstrom} & \SI{-2.51}{\percent} & kristallin        & \SI{2.512}{\gpcc}  & \SI{+7.83}{\percent}  \\
+
+%% & \textbf{Koord.}
+%% & \num{4.00}
+%% & \num{4.00}
+%% & \num{4.00}
+%% & \num{4.00}
+%% & \num{4.00}
+%% & \num{4.00}
+
+    \hline
+  \end{tabularx}
+\end{table}
+
+Eine Parametrisierung gilt als erfolgreich bei der Beschreibung von kristallinem Silizium, wenn bei einer Relaxierung des Kristalles bei \SI{600}{\kelvin} (Schmelztemperatur: \SI{1687}{\kelvin}\cite{haynes_crc_2011}) über \num{100000} Zeitschritte mit anschließender Abkühlung auf \SI{50}{\kelvin} die Gittereigenschaften bewahrt werden.
+Dafür werden die Dichten und die aus der radialen Verteilungsfunktion gewonnenen Koordinationszahlen und Bindungslängen mit Referenzwerten\cite{haynes_crc_2011} verglichen (Tabelle~\ref{tab:csiresults}).
+Die Radiale Verteilungsfunktion wird außerdem hinsichtlich der Struktur des Materiales untersucht (Abbildung~\ref{fig:siliconrdf}).
+
+Lediglich \pot{kulkarni} und \pot{nielson} sind dabei erfolgreich, wohingegen sich mit \pot{narayanan} und \pot{liu\_ettringite} amorphe Strukturen bilden, was sich auch in der stark überschätzten Dichte zeigt.
+\pot{newsome} zeigt zudem in allen Berechnungen eine Aufspaltung der Hauptbindungslänge (Abbildung~\ref{fig:newsomerdf}), welche dadurch in einigen Auswertungen unterschätzt wird.
+
+\begin{figure}[H]
+  \centering
+
+  \captionsetup[subfigure]{singlelinecheck=false}
+  \def\subfigwidth{\textwidth}
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{Si_kulkarni_rdf}
+    \subcaption{\pot{kulkarni}: Kristallstruktur mit schmalen, hohen Spitzen in der RDF}
+    \label{fig:kulkarnirdf}
+  \end{subfigure}
+
+  \vspace{1em}
+
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{Si_newsome_rdf}
+    \caption{\pot{newsome}: Aufspaltung der Hauptbindungslänge, Kristallstruktur ist noch erkennbar}
+    \label{fig:newsomerdf}
+  \end{subfigure}
+
+  \vspace{1em}
+
+  \begin{subfigure}[t]{\subfigwidth}
+    \includegraphics[width=\textwidth]{Si_liu_rdf}
+    \caption{\pot{liu\_ettringite}: Verformung zu einer amorphen Struktur ohne langreichweitige Ordnung}
+    \label{fig:liurdf}
+  \end{subfigure}
+
+  \caption{RDF-Diagramme nach der Relaxierung von c-\ce{Si}-Strukturen}
+  \label{fig:siliconrdf}
+\end{figure}
 
 \subsubsection{Amorphes Silizium (a-\ce{Si})}
 
-Durch langsame Relaxation zufällig positionierter Siliziumatome wurde amorphes Silizium generiert, das wie die Kristalle zuvor auf Dichte und Bindungslängen untersucht wurde.
-Deren Werte variieren für amorphes Silizium stärker als für kristallines, liegen jedoch mit maximal \SI{4}{\percent} nah am experimentell bestimmten Wert für dünne Schichten von \SI{2.3}{\gpcc}\cite{remes_optical_1998}.
-Die meisten Parametrisierungen erzeugen plausible Werte, wobei \pot{Al\_Al0\_AlN} und \pot{newsome} sehr starke Abweichungen zeigen.
-Detaillierte Daten zu diesem Test sind in Anhang~\ref{appendix_silicon} zu finden.
+Zur Untersuchung amorpher Siliziumstrukturen wurden diese durch Relaxierung zufälliger Siliziumstrukturen mit einer Dichte von \SI{2.11}{\gpcc} im kanonischen Ensemble bei \SI{1500}{\kelvin} erzeugt und auf \SI{50}{\kelvin} abgekühlt, bevor sie mit den oben beschriebenen Methoden analysiert wurden.
+Aufgrund der Spannweite möglicher amorpher Strukturen gilt eine Parametrisierung hier allgemein als erfolgreich, wenn sie in einer stabilen Relaxation eine amorphe Struktur erzeugen kann, weshalb beinahe alle Parametrisierungen einen Erfolg vorweisen.
+
+\begin{table}[H]
+  \begin{threeparttable}
+
+    \caption{Vergleich der Struktur amorphen Siliziums}
+    \label{tab:amorphoussilicon}
+
+    \oddrowcolors
+    \begin{tabularx}{\textwidth}{|llXXlX|}
+      \hline
+      \textbf{Parametrisierung} & \multicolumn{2}{l}{\textbf{Bindungslänge}}   & \textbf{Koord.} & \textbf{Dichte}    & ~                        \\
+      \hline
+      \textit{(kristallin)}     & \SI{2.352}{\angstrom} & ~                    & \num{4.00}      & ~                  & ~                        \\
+      \textit{amorph}           & ~                     & ~                    & ~               & \SI{2.29}{\gpcc} \cite{remes_optical_1998} &  \\
+      \pot{Al\_Al0\_AlN}        & \SI{2.379}{\angstrom} & \SI{+1.15}{\percent} & \num{4.59}      & \SI{2.373}{\gpcc}  & \SI{+3.62}{\percent}     \\
+      \pot{kulkarni}            & \SI{2.339}{\angstrom} & \SI{-0.55}{\percent} & \num{4.05}      & \SI{2.361}{\gpcc}  & \SI{+3.10}{\percent}     \\
+      \pot{liu\_ettr.}          & \SI{2.401}{\angstrom} & \SI{+2.08}{\percent} & \num{4.10}      & \SI{2.314}{\gpcc}  & \SI{+1.05}{\percent}     \\
+      \pot{narayanan}           & \SI{2.383}{\angstrom} & \SI{+1.32}{\percent} & \num{4.05}      & \SI{2.365}{\gpcc}  & \SI{+3.28}{\percent}     \\
+      \pot{newsome}             & \SI{2.153}{\angstrom} & \SI{-8.46}{\percent} & \num{1.17}      & \SI{2.398}{\gpcc}  & \SI{+4.72}{\percent}     \\
+      \pot{nielson}             & \SI{2.411}{\angstrom} & \SI{+2.51}{\percent} & \num{4.82}      & \SI{2.358}{\gpcc}  & \SI{+2.97}{\percent}     \\
+      \pot{zhang}               & \SI{2.357}{\angstrom} & \SI{+0.21}{\percent} & \num{4.39}      & \SI{2.329}{\gpcc}  & \SI{+1.70}{\percent}     \\
+      \hline
+    \end{tabularx}
+
+  \end{threeparttable}
+\end{table}
+
+\begin{figure}[!b]
+  \centering
+  \includegraphics[width=\textwidth]{kulkarni_rdf_amorphous}
+  \caption[Radiale Verteilungsfunktionen von relaxiertem a-\ce{Si}]{
+    RDF von a-\ce{Si} mit \pot{kulkarni}-Parametrisierung: keine Kristallisation erkennbar
+    }
+  \label{fig:amorphousrdf}
+\end{figure}
+
+\todo{Generelle Frage: Hinweis auf crc vorhanden?}
+Die Ergebnisse dieser Untersuchungen führen zu ähnlichen Ergebnissen für alle Parametersätze (Tabelle~\ref{tab:amorphoussilicon}), wobei \pot{newsome} erneut zur Unterschätzung der Bindungslänge neigt.
+Die Bindungslängen sind mit \SI{<3}{\percent} Abweichung in Übereinstimmung mit der Bindungslänge von kristallinem Silizium.
+Simulationen mit \pot{kulkarni}, \pot{liu\_ettringite} und \pot{narayanan} zeigen auch eine Koordination von $\approx\num{4}$, die sich aus der Anzahl von Bindungen für Siliziumatome ergibt, doch konnten nicht alle Parametrisierungen diesen Wert reproduzieren.
+Somit zeigt sich die ReaxFF-Formulierung bei korrekter Parametrisierung erfolgreich in der Vermeidung von Überkoordinationen.
+Bei Untersuchungen der Dichte zeigen alle Parametrisierungen eine systematische Überschätzung des Referenzwertes von \SI{2.29}{\gpcc}\cite{remes_optical_1998} um wenige Prozent, die bereits bei der Untersuchung kristalliner Strukturen beobachtet werden konnte (Tabelle~\ref{tab:csiresults}).
+Untersuchungen der RDF-Diagramme zeigt keine langreichweitige Ordnung nach \SI{4}{\angstrom} und somit die Bildung von amorphen Strukturen (exemplarisch Abbildung~\ref{fig:amorphousrdf} für \pot{kulkarni}).
 
 \subsubsection{Abscheidungssimulationen (PVD)}
 
 Die Simulationen von Silizium-PVD selbst verlaufen wie in Kapitel~\ref{parsivald} vorgestellt und unterscheiden sich kaum von den Parsivald-Simulationen der vorherigen Abschnitte.
 Durch den Aufbau von gerichteten Bindungen zwischen den Silizium-Atomen wird die Bildung amorpher Schichten erwartet, die sich auch durch verringerte Mobilität der Atome auf der Oberfläche ergibt.
-Eine Simulation gilt als erfolgreich, wenn die Parsivald-Simulation terminiert und einen dichten Silizium-Film gebildet hat, was nur bei \pot{newsome} nicht der Fall war\todo{was war bei newsome?}.
+Eine Simulation gilt als erfolgreich, wenn die Parsivald-Simulation erfolgreich terminiert und einen dichten Silizium-Film gebildet hat.
+Bis auf die \pot{zhang}-Parametrisierung, bei der sich sämtliche MD-Simulationen aufgehangen haben, konnten alle Parametrisierungen einen dünnen Film erzeugen.
+Aufgrund der insgesamt guten Ergebnisse wurden alle weitergehenden PVD-Simulationen mit dem \pot{kulkarni}-Parametersatz durchgeführt.
 
 \subsubsection{Vorbereitungen chemischer Gasphasenabscheidungen}
 
@@ -149,8 +246,6 @@ Die Simulationen wurden für die Abscheidungen auf den verschiedenen Kristallebe
 \end{figure}
 
 Zur Charakterisierung der Kristalleigenschaften der abgeschiedenen Schicht wurde ihre radiale Verteilungsfunktion berechnet, die bereits nach \SI{4}{\angstrom}, keine langreichweitige Ordnung mehr zeigt, weshalb von einer amorphen Schicht auszugehen ist, wobei das kristalline Substrat in der RDF in Form von Spitzen an den Gitterabständen zu erkennen ist.
-Die mittlere Koordinationszahl von \num{3.99} stimmt zudem gut mit der Anzahl an Bindungen für Silizium, die bei \num{4} liegt, überein.
-Somit zeigt sich die ReaxFF-Formulierung erfolgreich in der Darstellung der strukturellen Eigenschaften von Silizium.
 
 Die Unebenheiten der Oberfläche, welche Tiefen von \SI{30}{\angstrom} erreichen können, liegen hauptsächlich in der Form vieler Nanoporen vor, welche eine maximale Breite von wenigen Nanometern haben (Abbildung~\ref{fig:siliconprofile}).
 Im Gegensatz zu den Vertiefungen während der Kupfer-PVD (Abschnitt~\ref{copperpvd}) werden diese nicht vollständig mit dem weiteren Wachstum der Schicht geschlossen, sodass die Ausbildung über längere Zeiträume ermöglicht wird.
