--- a/kmc.tex
+++ b/kmc.tex
@@ -7,20 +7,20 @@ Damit stellen sie eine numerische Lösung der Mastergleichung für Markov-Prozes
 \begin{equation}
   \frac{d \rho(X_m,t)}{d t} = \sum_n{r_{n m}\rho(X_n,t) - \sum_n{r_{m n}\rho(X_m,t)}}
 \end{equation}
-KMC-Methoden bieten sie somit hauptsächlich zur Simulation stochastischer Prozesse an, wobei sie auch Nichtgleichgewichtssysteme beschreiben können und somit unter anderem zur Simulation von Oberflächenreaktionen und Schichtabscheidung geeignet sind\cite{battaile_kinetic_2008}.
+KMC-Methoden bieten sich somit hauptsächlich zur Simulation stochastischer Prozesse an, wobei sie durch die Möglichkeit zur Darstellung von Nichtgleichgewichtssystemen unter anderem zur Simulation von Oberflächenreaktionen und Schichtabscheidungen geeignet sind\cite{battaile_kinetic_2008}.
 
-Ausgehend von einem Startzustand $X_0$ aus dem Zustandsraum $\mathbb{X}$ zum Zeitpunkt $t_0 = 0$ wird eine zeitliche Abfolge von Zuständen $X_n \in \mathbb{X}$ nach dem folgenden Algorithmus erzeugt:\\
+Eine Simulation findet nach dem folgenden Algorithmus statt, bei dem ausgehend von einem Startzustand $X_0$ aus dem Zustandsraum $\mathbb{X}$ zum Zeitpunkt $t_0 = 0$ eine zeitliche Abfolge von Zuständen $X_n \in \mathbb{X}$ erzeugt wird:\\
 Zuerst werden alle Ereignisse $E_i$, die einen Übergang vom vorherigen Zustand $X_{n-1}$ zu einem beliebigen anderen Zustand $X_n^i$ ermöglichen, ermittelt und gesammelt:
 \begin{equation}
   E_i : X_{n-1} \rightarrow X_n^i \in \mathbb{X} ~~,\quad i \in [1, N]
 \end{equation}
-Jedem Ereignis $E_i$ wird nun eine individuelle Rate $r_i$ zugeordnet, die zugleich seine Gewichtung der Auswahl-Wahrscheinlichkeit ist.
-Zudem wird seine akkumulierte Rate $R_i$ gebildet, welche für die Auswahl eines Ereignisses genutzt wird.
+Jedem Ereignis $E_i$ wird nun eine individuelle Rate $r_i$ zugeordnet, die zugleich als Gewicht seiner Auswahl-Wahrscheinlichkeit dient.
+Dafür wird seine akkumulierte Rate $R_i$ gebildet, welche für die Auswahl eines Ereignisses genutzt wird.
 Die Summe aller Raten ist somit $R_N$.
 \begin{equation}
   R_i = \sum_{j \le i}{r_j}
 \end{equation}
-Anschließend wählt die Simulation anhand einer gleichverteilten Zufallszahl $u$ ein Ereignis und wendet es an, indem der Zielzustand $X_n^i$ als neuen Zustand $X_n$ akzeptiert wird.
+Anschließend wird anhand einer gleichverteilten Zufallszahl $u$ ein Ereignis $E_i$ ausgewählt und angewendet, indem sein Zielzustand $X_n^i$ als neuer Zustand $X_n$ akzeptiert wird.
 \begin{equation}
   X_n = X_n^i : R_{i-1} \le u R_N < R_i ~~,\quad u \in [0,1)~\text{gleichverteilt}
 \end{equation}
@@ -28,8 +28,8 @@ Zum Abschluss des KMC-Schrittes wird die Simulationszeit gemäß einer Poisson-V
 \begin{equation}
   t_n = t_{n-1} + \frac{-\ln(u')}{R_N} ~~,\quad u' \in [0,1)~\text{gleichverteilt}
 \end{equation}
-Nun kann der nächste Systemzustand $X_{n+1}$ nach der gleichen Vorgehensweise bestimmt werden.
-Die Simulation bricht ab, sobald keine weiteren Ereignisse mehr vorhanden sind ($N=0$ oder $R_N=0$) oder eine Schranke der Simulationszeit überschritten wurde ($t_n > t_\text{fin}$).
+Nun kann der nächste Systemzustand $X_{n+1}$ in einem neuen KMC-Schritt nach dem gleichen Algorithmus bestimmt werden.
+Die Simulation terminiert, sobald keine weiteren Ereignisse mehr vorhanden sind ($N=0$ oder $R_N=0$) oder eine Schranke der Simulationszeit überschritten wurde ($t_n > t_\text{max}$).
 Abbildung~\ref{fig:kmctree} zeigt zur Veranschaulichung ein generisches Beispiel einer KMC-Simulation.
 
 \begin{figure}
@@ -53,16 +53,16 @@ Darin zeigt sich ein Problem der KMC-Formulierung:
 Die Ereignisraten sind Eingabewerte und müssen vor der Auswahl der Ereignisse bekannt sein.
 %% Note to self: {Es stimmt schon, dass andere Software das anders macht, aber ist aufgrund der Formulierung zwingend notwendig, die Energien der Ereignisse vorher zu kennen. Weiter unten beschreibe ich, wie Parsivald diese Notwendigkeit umgeht, dabei aber die Reaktionskinetik nicht mehr beschreiben kann}
 Zwar lassen sich unbekannte Raten auch während der Simulation durch exaktere Methoden wie Elektronenstrukturrechnungen ermitteln\cite{stamatakis_unraveling_2012}, allerdings verursachen diese Methoden bei einer Vielzahl verschiedenartiger Ereignisse einen enormen Rechenaufwand.
-Deshalb wird oft auf ein Simulationsgitter zurück gegriffen, um die Zahl der verschiedenartigen Zustands-Übergänge gering zu halten.
+Deshalb wird oft auf ein Simulationsgitter zurück gegriffen, um die Zahl der verschiedenartigen Ereignisse gering zu halten.
 
-Vor allem bei kristallinen Strukturen lassen sich viele Übergänge durch das Verschieben, Entfernen oder Hinzufügen von Atomen auf den Gitterplätzen beschreiben, wobei die Ereignisraten jeweils von den benachbarten Gitterplätzen abhängig sind.
+Vor allem bei kristallinen Strukturen lassen sich viele Ereignisse durch das Verschieben, Entfernen oder Hinzufügen von einzelnen Atomen auf den Gitterplätzen beschreiben, wobei die Ereignisraten jeweils von den benachbarten Gitterplätzen abhängig sind.
 Dadurch lässt sich durch eine Suche über alle betroffenen Gitterplätze effizient eine Ereignisliste aufbauen, die anschließend zur Auswahl eines Ereignisses genutzt werden kann.
-Atompositionen in amorphen Strukturen lassen sich keinen Gitterpunkten zuordnen, sondern sind kontinuierlich im Raum verteilt (Off-Lattice), wodurch der Zustandsraum durch kontinuierliche Freiheitsgrade überabzählbar unendlich viele Zustände enthält und nicht mehr vollständig betrachtet werden kann.
+Atompositionen in amorphen Strukturen sind hingegen kontinuierlich im Raum verteilt und lassen sich keinen Gitterplätzen zuordnen (Off-Lattice), wodurch der Zustandsraum durch kontinuierliche Freiheitsgrade überabzählbar unendlich viele Zustände enthält und nicht mehr vollständig betrachtet werden kann.
 
-Um diese Beschränkungen zu umgehen, werden in Parsivald (Abschnitt~\ref{parsivald}) alle gleichartigen Ereignisse, die sich in unmittelbarer Nachbarschaft eines bestimmten Oberflächenatomes befinden, zu einem einzigen Ereignis mit fester Reaktionsrate zusammen gefasst.
+Um diese Beschränkungen zu umgehen, werden in Parsivald (Abschnitt~\ref{parsivald}) alle gleichartigen Ereignisse, die sich in unmittelbarer Nachbarschaft eines bestimmten Oberflächenatomes befinden, zu einem einzigen Ereignis mit fester Rate zusammen gefasst.
 Anschließend bestimmt eine Molekulardynamik-Simulation den Ausgang der Oberflächenreaktion mit atomistischer Genauigkeit.
-Trotz Ergodizität der MD-Simulationen, durch welche verschiedenen Ergebnissen des Ereignisses eine Wahrscheinlichkeit entsprechend ihrer relativen Reaktionsrate zugewiesen werden sollte, führt diese Formulierung zu einer Verletzung der KMC-Formulierung durch eine Verzerrung der Simulationszeit bei inkorrekten Ereignisraten, die aber bei strukturellen Untersuchungen vernachlässigt werden kann.
-%% Da dies keinen Einfluss auf die strukturellen Eigenschaften hat, lassen sich Untersuchungen der Struktur damit dennoch durchführen.
-Im Gegenzug sorgt die Kombination beider Methoden zu einer enormen Beschleunigung gegenüber reinen MD-Rechnungen und zur Möglichkeit der strukturellen Betrachtung für KMC-Simulationen, wobei für gesteigerte Effizienz der Algorithmen auf spezialisierte Datenstrukturen zurück gegriffen werden muss.
-\todoline{Sie erlaubt zudem die atomistische Betrachtung gigantischer Systeme.}
-\todoline{Passt alles auf zwei nebeneinander liegende Seiten?}
+Trotz Ergodizität der MD-Simulationen, durch welche verschiedenen Ergebnissen des Ereignisses eine Wahrscheinlichkeit nach ihrer relativen Reaktionsrate zugewiesen werden sollte, führt diese Formulierung zu einer Verletzung der KMC-Formulierung durch eine Verzerrung der Simulationszeit bei inkorrekten Ereignisraten.
+Hier kann eine Anpassung der Ereignisraten notwendig sein, auf die bei rein strukturellen Untersuchungen gegebenenfalls verzichtet werden kann, sofern sich die Raten nur durch einen festen Vorfaktor unterscheiden.
+
+Im Gegenzug sorgt die Kombination von MD- mit KMC-Methoden zu einer enormen Beschleunigung gegenüber reinen MD-Rechnungen einerseits und zur Möglichkeit der Off-Lattice-Simulationen mit KMC-Methoden andererseits, wobei für gesteigerte Effizienz der Algorithmen auf spezialisierte Datenstrukturen zurück gegriffen werden muss.
+Somit können auch große Simulationsräume effektiv betrachtet werden.
